spacing issues fixed

--- a/product-landing-page/styles.css
+++ b/product-landing-page/styles.css
@@ -13,7 +13,7 @@ body {
     height: auto;
     width: auto ;
     place-items: center;
-    padding: 140px 40px 40px 40px;
+    padding: 0px 40px 40px 40px;
 }
 
 
@@ -57,6 +57,7 @@ img{
     width: 100%;
     background-color: #071E21;
     z-index: 1;
+    margin-bottom: 80px;
 }
 
 .nav-link{
@@ -167,6 +168,7 @@ h2{
 .c-formContainer {
     position: relative;
     font-weight: 700;
+    padding-top: 70px;
 }
 
 .c-form,
@@ -321,6 +323,7 @@ h2{
 
 .section{
         height: 450px;
+        padding-top: 80px;
 }
 
 
@@ -436,3 +439,5 @@ h2{
     background-image: url(./assets/tmr-card.jpg);
     background-size: 100% 100%;
 }
+
+/* modals */
